k8s/userservice.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: User_Service
  template:
    metadata:
      labels:
        app: User_Service
    spec:
      containers:
        - name: biddingservice
          image:  gregorycox94e/mywebapps:userservice
          ports:
            - containerPort: 8080
