k8s/project_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - protocol: "TCP"
      port: 3001 # port accessible inside the cluster
      targetPort: 8080 # port to forward to inside the pod
      nodePort: 30001 # used to access from the outside
  type: LoadBalancer
  
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: jpragasa/blog:1.0.4
          ports:
            - containerPort: 8080
  
  
---
apiVersion: v1
kind: Service
metadata:
  name: map-service
spec:
  selector:
    app: map
  ports:
    - protocol: "TCP"
      port: 3002 # port accessible inside the cluster
      targetPort: 8080 # port to forward to inside the pod
      nodePort: 30002 # used to access from the outside
  type: LoadBalancer
  
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-deployment
  labels:
    app: map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map
  template:
    metadata:
      labels:
        app: map
    spec:
      containers:
        - name: map
          image: jpragasa/map:1.0.4
          ports:
            - containerPort: 8080
            
            
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: map-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /map(/|$)(.*)
            backend:
              serviceName: map-service
              servicePort: 3002
          - path: /blog(/|$)(.*)
            backend:
              serviceName: blog-service
              servicePort: 3001
